# transform-import-declaration-plugin

./: .gitignore  Cargo.toml  E2E-TESTING.md  LICENSE  MONOREPO.md  README.md  REQUIREMENTS.md  SWC_SYNTAX_CONTEXT_BUG.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: publish.yml
e2e-tests/: README.md  babel.test.ts  package.json  swc.test.ts  test-cases.ts  tsconfig.json
script/: prerelease.mts
